Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL)
-
None
Description
The mariabackup / Galera SST (via mariabackup) failed if password is passed to it (from the Galera SST script) via MYSQL_PWD environment variable.
An example of a failure, taken from buildbot logs:
+ sudo mysqld_safe --defaults-extra-file=/home/buildbot/node2.cnf --user=mysql
|
ERROR 2002 (HY000): Can't connect to MySQL server on 'localhost' (111)
|
+ sleep 3
|
210401 02:24:22 mysqld_safe Adding '/usr/lib/x86_64-linux-gnu/libjemalloc.so.1' to LD_PRELOAD for mysqld
|
210401 02:24:22 mysqld_safe Logging to '/var/lib/node2/node2.err'.
|
210401 02:24:22 mysqld_safe Starting mysqld daemon with databases from /var/lib/node2
|
+ for i in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
|
+ mysql -uroot -prootpass --port=8302 --protocol=tcp -e 'select * from mgc.t1'
|
ERROR 2013 (HY000): Lost connection to MySQL server at 'handshake: reading initial communication packet', system error: 104
|
+ sleep 3
|
+ for i in 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
|
+ mysql -uroot -prootpass --port=8302 --protocol=tcp -e 'select * from mgc.t1'
|
ERROR 2002 (HY000): Can't connect to MySQL server on 'localhost' (111)
|
+ sleep 3
|
Attachments
Issue Links
- relates to
-
MDEV-31809 Automatic SST user account management
-
- Closed
-
- split to
-
MDEV-25356 SST scripts should use the new mariabackup interface
-
- Closed
-